modifying dentist call screen
(also cleaning up the scripts folder a little)

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 	  		</div>
 
 	  		<!-- Shopping Spree SubSection -->
-	  		<div id="storeContainer" style="position: relative; height: 100%; left: 200vw; top: -157%;">
+	  		<div id="storeContainer" style="position: relative; height: 100%; left: 200vw; top: -153%;">
 	    		<div id="shoppingexplanation" style="flex: 1 0 auto; padding: 0 2em;">
 	    			<div style="width: 45vw;">
 					    <h1>In the Store</h1>
@@ -384,7 +384,7 @@
   			</div>
   		</div>
   	</div>
-  	<div style="height: 1em;"> <a class="Continue-Button" onClick="addHeight(this)">Continue</a> </div>
+  	<!-- <div style="height: 1em;"> <a class="Continue-Button" onClick="addHeight(this)">Continue</a> </div> -->
 	</section>
 
 	<!-- Outro -->
