changed continue to dentist visit link to be a  button

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 		      	<br>
 					You write down the date and time for the appointment and tell the kids about the upcoming dental visit. </div>
 		    </div>
-		    <div> <a href="module2.html" style="color: white; font-weight: bold;">Continue to the Dentist Visit</a> </div>
+		    <div> <button href="module2.html" style="color: white; font-weight: bold;">Continue to the Dentist Visit</button> </div>
 	  	</div>
   	</div>
 	</section>
