--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 		      	<br>
 					You write down the date and time for the appointment and tell the kids about the upcoming dental visit. </div>
 		    </div>
-		    <div> <button href="module2.html" style="color: white; font-weight: bold;">Continue to the Dentist Visit</button> </div>
+		    <div> <button onclick="window.open('module2.html', '_self');" style="color: white; font-weight: bold;">Continue to the Dentist Visit</button> </div>
 	  	</div>
   	</div>
 	</section>
