--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 								<b style="color: coral"> -$90 financial</b><b style="color: greenyellow"> +2 emotional health</b>
 							</p>
 						</div>
-						<button style="height: 5em; align-self: center; width: 7em; text-align: center; padding: 0; margin: 0 0 0 2em;" onClick="callAction('attendScienceFair');ScienceFairAttend();">Attend</button>
+						<button style="height: 5em; align-self: center; width: 7em; text-align: center; padding: 0; margin: 0 0 0 2em;" onClick="ScienceFairAttend();">Attend</button>
 					</div>				
 					<div class="flexContainer" style="justify-content: space-between; flex-flow: row wrap;">
 						<div style="margin: 1em 0;">2.</div>
@@ -308,7 +308,7 @@
 								<b style="color: coral"> -2 emotional health</b>
 							</p>
 						</div>
-						<button style="height: 5em; align-self: center; width: 7em; text-align: center; padding: 0; margin: 0 0 0 2em;" onClick="callAction('skipScienceFair');ScienceFairSkip();">Skip</button>
+						<button style="height: 5em; align-self: center; width: 7em; text-align: center; padding: 0; margin: 0 0 0 2em;" onClick="ScienceFairSkip();">Skip</button>
 					</div>
 				</div>
 			</div>	  
