exit out of checkout if accidentally clicked

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <ul>
           <li id="icon-list" style="display: none;"><img onClick="DisplayShoppingList(); //d3.select('#shoppingexplanation').remove();" class="mediumIcon" src="images/icon-shoppinglist.png"></li>
           <li id="icon-time" style="display: none;"><img class="mediumIcon" src="images/icon-time.png"><div id="timeremaing" style="float: right;padding: 1.2em 0.5em 1.2em 0;">0 hr, 0 min have passed</div></li>
-          <li id="icon-checkout" style="display: none;"><img onClick="PreCheckOut();" class="mediumIcon" src="images/icon-cart.png"></li>
+          <li id="icon-checkout" style="display: none;"><img onClick="ReadyToCheckOut();" class="mediumIcon" src="images/icon-cart.png"></li>
       </ul>
     </shoppingspreeIcons>
     <stats class="stats-hidden stats-visible">
