--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h2 class="hero_header">MCarES<span class="light">Medicaid Care Experience Simulation Project</span></h2>
       <p class="tagline"></p>
     </div>
-    <div style="height: 1em;" class="align-bottom"> <a class="start-Button" onClick="addHeight(this); playPause(d3.select('#prologueVid').node(), 2000);">Start</a> </div>
+    <div style="height: 1em;" class="align-bottom"> <a class="start-Button" onClick="addHeight(this);DisplayIntroPage();">Start</a> </div>
     <buffer></buffer>
   </section>
 
@@ -421,6 +421,7 @@
 <script type="text/javascript" src="scripts/bills.js"></script> 
 <script type="text/javascript" src="scripts/shoppingspree.js"></script>
 <script type="text/javascript" src="scripts/sciencefair.js"></script>
+<script type="text/javascript" src="scripts/intropage.js"></script>
 <!-- observer script to animate revealing hidden things --> 
 <script>
 	function LaunchFakeSection(){
