changes to module 2

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 							<p>Request time off work and attend...</p>
 							<p>
 								Miss 5 hours of work</br>
-								<b style="color: coral"> -$90 financial</b><b style="color: greenyellow"> +2 emotional health</b>
+								<b style="color: coral"> - lose pay</b><b style="color: greenyellow"> + improve morale</b>
 							</p>
 						</div>
 						<button style="height: 5em; align-self: center; width: 7em; text-align: center; padding: 0; margin: 0 0 0 2em;" onClick="ScienceFairAttend();">Attend</button>
@@ -305,7 +305,7 @@
 						<div style="flex: 1 1 auto; padding: 0 0 0 1em; width: 20vw;">
 							<p>Tell Mia that you cannot afford not to work, and won't be able to cheer for her at the science fair...</p>
 							<p>
-								<b style="color: coral"> -2 emotional health</b>
+								<b style="color: coral"> - lower morale</b>
 							</p>
 						</div>
 						<button style="height: 5em; align-self: center; width: 7em; text-align: center; padding: 0; margin: 0 0 0 2em;" onClick="ScienceFairSkip();">Skip</button>
