added note about completing dentist selection

--- a/index.html
+++ b/index.html
@@ -337,7 +337,10 @@
   			<div style="display: flex; flex-flow: column wrap; justify-content: space-evenly;height:100%;">
   				<div style="display: flex; flex-flow: row; height:100%;">
   					<div id="dentist-description-container">
-  						<div class="dentist-list-header">Dentist Selection</div>
+  						<div class="dentist-list-header">
+  							<div style="font-size: larger; font-weight:  bold">Dentist Selection<div>
+  							<div><i>You need to successfully book an appointment to move on to the next module.</i></div>		
+  						</div>
   						<div id="dentist-list-container">
   							<div class="dentist-list-item" id="location1">
   								<h1 class="dentistName">Hilltop Dental Group</h1>
