include participantID for Module2
include participant id when moving to module2

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 		      	<br>
 					You write down the date and time for the appointment and tell the kids about the upcoming dental visit. </div>
 		    </div>
-		    <div> <button onclick="window.open('module2.html', '_self');" style="color: white; font-weight: bold;">Continue to the Dentist Visit</button> </div>
+		    <div> <button onclick="window.open('module2.html' + window.location.search, '_self');" style="color: white; font-weight: bold;">Continue to the Dentist Visit</button> </div>
 	  	</div>
   	</div>
 	</section>
