--- a/module2.html
+++ b/module2.html
@@ -72,22 +72,11 @@
 </div>
 <!-- vimeo player -->
 <script src="scripts/player.js"></script>
-
-<script type="text/javascript" src="scripts/myScripts.js"></script> 
 <script type="text/javascript" src="scripts/module2nav.js"></script>
+
+<!-- <script type="text/javascript" src="scripts/myScripts.js"></script>  -->
 <!-- observer script to animate revealing hidden things --> 
 <script>
-	window.onload = function() {
-		setTimeout(function() {
-			// preload image
-			new Image().src = "images/interior-aldi.png";
-			new Image().src = "images/interior-gasstation.png";
-			new Image().src = "images/interior-cornerstore.png";
-			new Image().src = "images/exterior-gasstation.png";
-			new Image().src = "images/exterior-cornerstore.png";
-			new Image().src = "images/exterior-aldi.png";
-		}, 1000);
-	};
 
 	console.log("Got to end of script");
 </script>
