--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
   	<div class="darkbackground" style="background-color: rgba(0, 0, 0, 0);">		  
 				<div class="flexContainer column narrationInner">
 					<div style="height: 70vh; overflow-y: auto;">
-						<h1 style="margin: 0 0 1em;">Scheduling a dentist</h1>
+						<h1 style="margin: 0 0 1em;">Scheduling a Dental Appointment</h1>
 						<p>At dinner, Mia mentioned they learned about dental care at school today and the teacher asked the students when they had last visited a dentist. Mia couldn't answer because she couldn't remember.</p>
-						<p>You know the answer though. Neither you nor your children have had a dental appointment since their father passed. That would make it at least 5 years since their last dental check-up. You decide to schedule a dental visit for the children.</p>
+						<p>You know the answer though. Neither you nor your children have had a dental appointment since their father passed. That would make it at least 5 years since their last dental check-up. You decide to schedule a dental visit for the children. Hopefully the information online matches when the offices are actually open.</p>
 					</div>
 				</div>
   	</div>
