--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 							<p>Every unpaid bill will reduce the household's <b style="color: green">emotional health</b></p>
 						</li>
 					</ul>
+					<p> Click the Continue button below to start sorting through the bills.</p>
 				</div>
 			</div>
   	</div>
@@ -382,7 +383,7 @@
   							<div class="dentist-list-item" id="location5">
   								<h1 class="dentistName">Smith Family Dentistry</h1>
   								<div>
-  									Hours: M-F 6am-5pm, Sat 9am-5pm, Sun 10am-3pm</br>
+  									Hours: M-F 6am-5pm, Sat 9am-5pm</br>
   									Distance: 4.8 mi</br>
   									Travel Time (Bus): 1 hr 11min - 1 hr 41 min
   								</div>
